Mon Feb 16 21:57:18 CET 2004   Joern Thyssen  <jth@gnubg.org> 

	* bearoff.c (HeuristicDatabase): align heuristic database
	with GetBearoffDistUncompressed (a.k.a. the 40 byte offset).
	(reported by Daniel Murhpy)

Mon Feb 16 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* html.c: Tidy text version of html export

Sat Feb 14 20:32:24 CET 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c: new command "load python <filename>".

Mon Feb  9 22:56:17 CET 2004  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportTMG): don't call SwapPlayers unless
	a game is in progress.
	(reported by John Marttila)

Thu Feb  5 19:06:31 CET 2004  Joern Thyssen  <jth@gnubg.org>

	* progress.c (formatDelta): fix small bug leading to
	gnubg thining that there is 60 hours/day.
	(reported by Michael Depreli)

Wed Feb 4 17:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* import.c (and minor changes in others) : Limit size of player
	names in import files, bug #7526

Mon Feb 02 2004 18:42:05 GMT
	
	* timer.c - wrong #if around include

Fri Jan 30 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* several files: Small changes for msdev compiler

Thu Jan 29 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c, gtkprefs.c: 3d quick draw-last options added

Wed Jan 28 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c: 3d quick draw-chequer target help added

Tue Jan 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c, gtkprefs.c: Some more 3d quick draw code

Mon Jan 26 19:24:34 2004  Joern Thyssen  <jth@gnubg.org>

	NetBSD compilation fixes by Adrian Bunk.

	* gnubg.c (real_main): HAVE_NL_INFO does not
	necessarily imply HAVE_LANGINFO_CODESET
	* sound.c: include sys/types.h before sys/audioio.h to
	define u_int.

Mon Jan 26 07:31:03 2004  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* htmlimages.c [!HAVE_LIBPNG] (CommandExportHTMLImages): Argument
	synch with HAVE_LIBPNG version.
